# Real-ESRGAN

./: .gitignore  Open Real-ESRGAN UI.bat  README.md  inference_realesrgan.py  inference_realesrgan_video.py  pyproject.toml  requirements.txt
docs/: model_selection.md  video_pipeline.md
realesrgan/: __init__.py  _compat.py  utils.py  version.py
scripts/: check_fp16_parity.py
ui/: README.md  app.py  pipeline.py
ui/web/: index.html
